--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 				<h1 class="text-center fb pb-4">Кондитерская фабрика Галан это...</h1>
 			</div>
 			<div class="col-lg-3 offset-1"><img src="img/about.png"/></div>
-			<div class="col-lg-7">
-				<ul>
+			<div class="col-lg-7 d-flex align-items-center">
+				<ul class="pl-3 pt-3">
 					<li>7 мощных производственных цехов.</li>
 					<li>12 высокопроизводительных совре­менных линий.</li>
 					<li>Партнеры и дистрибьюторы по России и странам СНГ,   филиалы и      	эксклюзивные торговые команды.</li>
@@ -168,6 +168,23 @@
 					<li>Тысячи довольных клиентов </li>
 					<li>Сотни тысяч довольных потребителей!</li>
 				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="news_block">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<h2 class="text-center pt-5 mt-2">Сладкие новости</h2>
+			</div>
+			<div class="col-lg-12">
+				<div class="row">
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3"></div>
+				</div>
 			</div>
 		</div>
 	</div>
