--- a/general_catalog.html
+++ b/general_catalog.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<header>
+<header class="contacts secondary_header">
 	<svg class="d-none" xmlns="http://www.w3.org/2000/svg"  width="0"  viewBox="0 0 114.469 99.656">
 		<defs>
 			<filter id="f2" x="0" y="0" width="200%" height="200%">
@@ -84,69 +84,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-12 head_center_text d-flex justify-content-center align-items-center">
-				<h2>Сладкого много не бывает</h2>
-			</div>
-			<div class="col-12 d-md-flex bottom_list d-none">
-				<div class="row align-items-center icons--wood">
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Крекеры</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon2"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Вафли</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon3"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Восточные
-							сладости</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon4"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Зефир
-							весовой</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon5"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Сухари</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon6"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Леденцы</p>
-					</div>
-				</div>
-			</div>
+
+
 		</div>
 	</div>
 </header>
@@ -179,177 +118,120 @@
 	</div>
 </div>
 </section>
-<section class="list_mobile_catalog d-flex d-md-none mt-4">
+<section class="list_mobile_catalog list_general_catalog mt-4 mb-4 d-flex align-items-center">
 	<div class="container">
-
-			<div class="row align-items-center icons--wood">
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
+		<div class="row align-items-center icons--wood">
+			<div class="col-12 pb-md-5 pb-2 pt-5 pt-lg-0 mt-3 mt-lg-0">
+				<h1>Ассортимент продукции</h1>
+			</div>
+			<div class="col-lg-4 col-6 d-flex flex-column align-items-center justify-content-center icon">
+				<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
+					<a  class="home_link" href=""></a>
+					<div class="col-12">
+					<div class="row">
+						<div class="image_block d-flex justify-content-center col-lg-6">
+							<svg  viewbox="-10 0 120 100">
 								<use xlink:href="#Icon"></use>
 							</svg>
 						</div>
-						<p class="m-0 name_product d-flex align-items-center">Крекеры</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-								<use xlink:href="#Icon2"></use>
-							</svg>
+						<div class="col-lg-6 d-flex justify-content-lg-start justify-content-center">
+							<p class="m-0 name_product d-flex align-items-center">Крекеры</p>
 						</div>
-						<p class="m-0 name_product d-flex align-items-center">Вафли</p>
+					</div>
 					</div>
 				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-							<use xlink:href="#Icon3"></use>
-						</svg>
+			</div>
+			<div class="col-lg-4 col-6 d-flex flex-column align-items-center justify-content-center icon">
+				<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
+					<a  class="home_link" href=""></a>
+					<div class="col-12">
+						<div class="row">
+							<div class="image_block d-flex justify-content-center col-lg-6">
+								<svg width="100%" viewbox="-10 0 120 100">
+									<use xlink:href="#Icon2"></use>
+								</svg>
+							</div>
+							<div class="col-lg-6 d-flex justify-content-lg-start justify-content-center">
+								<p class="m-0 name_product d-flex align-items-center">Вафли</p>
+							</div>
 						</div>
-						<p class="m-0 name_product d-flex align-items-center">Восточные
-							сладости</p>
 					</div>
 				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-15 0 120 100">
-							<use xlink:href="#Icon4"></use>
-						</svg>
-					</div>
-					<p class="m-0 name_product d-flex align-items-center">Зефир<br>
-						весовой</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-5 0 120 100">
-							<use xlink:href="#Icon5"></use>
-						</svg>
+			</div>
+			<div class="col-lg-4 col-6 d-flex flex-column align-items-center justify-content-center icon">
+				<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
+					<a  class="home_link" href=""></a>
+					<div class="col-12">
+						<div class="row">
+							<div class="image_block d-flex justify-content-center col-lg-6">
+								<svg width="100%" viewbox="-10 0 120 100">
+									<use xlink:href="#Icon3"></use>
+								</svg>
+							</div>
+							<div class="col-lg-6 d-flex justify-content-lg-start justify-content-center">
+								<p class="m-0 name_product d-flex align-items-center">Восточные
+									сладости</p>
+							</div>
 						</div>
-						<p class="m-0 name_product d-flex align-items-center">Сухари</p>
 					</div>
 				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-							<use xlink:href="#Icon6"></use>
-						</svg>
+			</div>
+			<div class="col-lg-4 col-6 d-flex flex-column align-items-center justify-content-center icon">
+				<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
+					<a  class="home_link" href=""></a>
+					<div class="col-12">
+						<div class="row">
+							<div class="image_block d-flex justify-content-center col-lg-6">
+								<svg width="100%" viewbox="-15 0 120 100">
+									<use xlink:href="#Icon4"></use>
+								</svg>
+							</div>
+							<div class="col-lg-6 d-flex justify-content-lg-start justify-content-center">
+								<p class="m-0 name_product d-flex align-items-center">Зефир<br>
+									весовой</p>
+							</div>
 						</div>
-						<p class="m-0 name_product d-flex align-items-center">Леденцы</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-6 d-flex flex-column align-items-center justify-content-center icon">
+				<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
+					<a  class="home_link" href=""></a>
+					<div class="col-12">
+						<div class="row">
+							<div class="image_block d-flex justify-content-center col-lg-6">
+								<svg width="100%" viewbox="-5 0 120 100">
+									<use xlink:href="#Icon5"></use>
+								</svg>
+							</div>
+							<div class="col-lg-6 d-flex justify-content-lg-start justify-content-center">
+								<p class="m-0 name_product d-flex align-items-center">Сухари</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-6 d-flex flex-column align-items-center justify-content-center icon">
+				<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
+					<a  class="home_link" href=""></a>
+					<div class="col-12">
+						<div class="row">
+							<div class="image_block d-flex justify-content-center col-lg-6">
+								<svg width="100%" viewbox="-10 0 120 100">
+									<use xlink:href="#Icon6"></use>
+								</svg>
+							</div>
+							<div class="col-lg-6 d-flex justify-content-lg-start justify-content-center">
+								<p class="m-0 name_product d-flex align-items-center">Леденцы</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 
-	</div>
-</section>
-<section class="about_block mt-5 mb-2 mb-lg-5">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h1 class="text-center fb pb-4">Кондитерская фабрика Галан это...</h1>
-			</div>
-			<div class="col-lg-3 offset-1 d-lg-block d-none"><img src="img/about.png"/></div>
-			<div class="col-lg-7 d-flex align-items-center">
-				<ul class="pl-3 pt-3">
-					<li>7 мощных производственных цехов.</li>
-					<li>12 высокопроизводительных совре­менных линий.</li>
-					<li>Партнеры и дистрибьюторы по России и странам СНГ,   филиалы и      	эксклюзивные торговые команды.</li>
-					<li>500 профессионально работающих спе­циалистов.</li>
-					<li>Тысячи довольных клиентов </li>
-					<li>Сотни тысяч довольных потребителей!</li>
-				</ul>
-			</div>
 		</div>
+
 	</div>
-</section>
-<section class="news_block">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="text-center pt-5 mt-2 mb-5">Сладкие новости</h2>
-			</div>
-			<div class="col-lg-12">
-				<div class="row">
-					<div class="col-lg-3 col-md-6 col-6 ">
-						<a href="#">
-						<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-						</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="col-12 d-flex justify-content-center align-items-center mt-3">
-				<a class="col-lg-2 d-flex justify-content-center align-items-center black_button pt-2 pb-2 mb-5" href="#">
-					<span href="#">Все новости</span>
-				</a>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="map_block">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-5 mt-5 mb-5 pl-5 info_in_contact">
-				<h2 class="pt-5 pb-3">Контакты</h2>
-				<p class="mb-4">ООО "Галан", Россия,<br>
-					352430, Краснодарский край,<br>
-					г. Курганинск,<br>
-					ул. Коммунистическая, д. 158,</p>
-				<p class="news_heading_block mb-0">Фактический адрес:</p>
-				<p class="mb-4">Россия, 352430,<br>
-					Краснодарский край,<br>
-					г. Курганинск,<br>
-					ул. Кавказская, д. 6,</p>
-				<p class="news_heading_block mb-0">Приемная:</p>
-				<p class="mb-4"><a href="tel:8(86147) 2-24-71">8 (86147) 2-24-71</a>,<a href="mailto:gendir@galanconditer.ru">gendir@galanconditer.ru</a></p>
-				<p class="news_heading_block mb-0">Отдел продаж:</p>
-				<p class="mb-4">тел./факс: <a href="tel:8 (86147) 7-77-77">8 (86147) 7-77-77</a>, <a href="mailto:info@galanconditer.ru "> info@galanconditer.ru </a></p>
-				<p class="news_heading_block mb-0">Отдел снабжения:</p>
-				<p class="mb-0">тел.:<a href="tel:8 (86147) 2-52-45">8 (86147) 2-52-45</a> , факс: <a href="tel:(86147) 2-51-95">(86147) 2-51-95</a></p>
-				<p class="mb-5 mt-4 mt-md-0"><span class="news_heading_block">Главный технолог:</span><a href="mailto:tehnolog@galanconditer.ru"> tehnolog@galanconditer.ru </a> </p>
-			</div>
-		</div>
-	</div>
-	<div id="map" style="width: 100%; height: 630px"></div>
 </section>
 <footer class="d-flex align-items-center">
 	<div class="container mt-4 mt-lg-0">
