--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<header>
+<header class="news_page secondary_header">
 	<svg class="d-none" xmlns="http://www.w3.org/2000/svg"  width="0"  viewBox="0 0 114.469 99.656">
 		<defs>
 			<filter id="f2" x="0" y="0" width="200%" height="200%">
@@ -85,68 +85,13 @@
 				</div>
 			</div>
 			<div class="col-12 head_center_text d-flex justify-content-center align-items-center">
-				<h2>Сладкого много не бывает</h2>
+                <div class="row-column">
+				<h1>Новости</h1>
+                <p>Пару предложений о теме<br>
+                    про новости</p>
+                </div>
 			</div>
-			<div class="col-12 d-md-flex bottom_list d-none">
-				<div class="row align-items-center icons--wood">
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Крекеры</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon2"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Вафли</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon3"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Восточные
-							сладости</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon4"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Зефир
-							весовой</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon5"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Сухари</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon6"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Леденцы</p>
-					</div>
-				</div>
-			</div>
+
 		</div>
 	</div>
 </header>
@@ -179,178 +124,97 @@
 	</div>
 </div>
 </section>
-<section class="list_mobile_catalog d-flex d-md-none mt-4">
-	<div class="container">
 
-			<div class="row align-items-center icons--wood">
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-								<use xlink:href="#Icon"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Крекеры</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-								<use xlink:href="#Icon2"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Вафли</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-							<use xlink:href="#Icon3"></use>
-						</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Восточные
-							сладости</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-15 0 120 100">
-							<use xlink:href="#Icon4"></use>
-						</svg>
-					</div>
-					<p class="m-0 name_product d-flex align-items-center">Зефир<br>
-						весовой</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-5 0 120 100">
-							<use xlink:href="#Icon5"></use>
-						</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Сухари</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-							<use xlink:href="#Icon6"></use>
-						</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Леденцы</p>
-					</div>
-				</div>
-			</div>
+<section class="news_section mt-5 mb-2 mb-lg-5">
+	<div class="container">
+		<div class="row">
+            <div class="col-12 articl pb-4 pt-4">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 image_article">
+                        <img src="img/news_image.png" alt="">
+                    </div>
+                    <div class="col-lg-9 col-md-9">
+                        <div class="row">
+                            <h2 class="d-flex col-12 p-md-0"><a href="">Название новости</a></h2>
+                            <p class="data_article mb-1 col-md-12 col-6 p-md-0">23.09.2018</p>
+                            <p class="preview_article col-12 p-md-0">Ребрендинг определяет рыночный имидж предприятия.
+                                Программа лояльности отталкивает конструктивный анализ рыночных цен, учитывая результат
+                                предыдущих медиа-кампаний. Как предсказывают футурологи целевой трафик отталкивает
+                                рекламоноситель. Отсюда естественно следует, что диверсификация бизнеса подсознательно
+                                упорядочивает институциональный стратегический рыночный план.</p>
+                            <a href="" class="detail_link col-md-12 col-6 p-md-0">Подробнее ></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 articl pb-4 pt-4">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 image_article">
+                        <img src="img/news_image.png" alt="">
+                    </div>
+                    <div class="col-lg-9 col-md-9">
+                        <div class="row">
+                            <h2 class="d-flex col-12 p-md-0"><a href="">Название новости</a></h2>
+                            <p class="data_article mb-1 col-md-12 col-6 p-md-0">23.09.2018</p>
+                            <p class="preview_article col-12 p-md-0">Ребрендинг определяет рыночный имидж предприятия.
+                                Программа лояльности отталкивает конструктивный анализ рыночных цен, учитывая результат
+                                предыдущих медиа-кампаний. Как предсказывают футурологи целевой трафик отталкивает
+                                рекламоноситель. Отсюда естественно следует, что диверсификация бизнеса подсознательно
+                                упорядочивает институциональный стратегический рыночный план.</p>
+                            <a href="" class="detail_link col-md-12 col-6 p-md-0">Подробнее ></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 articl pb-4 pt-4">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 image_article">
+                        <img src="img/news_image.png" alt="">
+                    </div>
+                    <div class="col-lg-9 col-md-9">
+                        <div class="row">
+                            <h2 class="d-flex col-12 p-md-0"><a href="">Название новости</a></h2>
+                            <p class="data_article mb-1 col-md-12 col-6 p-md-0">23.09.2018</p>
+                            <p class="preview_article col-12 p-md-0">Ребрендинг определяет рыночный имидж предприятия.
+                                Программа лояльности отталкивает конструктивный анализ рыночных цен, учитывая результат
+                                предыдущих медиа-кампаний. Как предсказывают футурологи целевой трафик отталкивает
+                                рекламоноситель. Отсюда естественно следует, что диверсификация бизнеса подсознательно
+                                упорядочивает институциональный стратегический рыночный план.</p>
+                            <a href="" class="detail_link col-md-12 col-6 p-md-0">Подробнее ></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 articl pb-4 pt-4">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 image_article">
+                        <img src="img/news_image.png" alt="">
+                    </div>
+                    <div class="col-lg-9 col-md-9">
+                        <div class="row">
+                            <h2 class="d-flex col-12 p-md-0"><a href="">Название новости</a></h2>
+                            <p class="data_article mb-1 col-md-12 col-6 p-md-0">23.09.2018</p>
+                            <p class="preview_article col-12 p-md-0">Ребрендинг определяет рыночный имидж предприятия.
+                                Программа лояльности отталкивает конструктивный анализ рыночных цен, учитывая результат
+                                предыдущих медиа-кампаний. Как предсказывают футурологи целевой трафик отталкивает
+                                рекламоноситель. Отсюда естественно следует, что диверсификация бизнеса подсознательно
+                                упорядочивает институциональный стратегический рыночный план.</p>
+                            <a href="" class="detail_link col-md-12 col-6 p-md-0">Подробнее ></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 download_articles pt-4 pb-4">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <a href="" class="d-flex align-items-center">Загрузить еще <i class="fas fa-angle-down"></i></a>
+                    </div>
+                </div>
+            </div>
+	</div>
+</section>
 
-	</div>
-</section>
-<section class="about_block mt-5 mb-2 mb-lg-5">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h1 class="text-center fb pb-4">Кондитерская фабрика Галан это...</h1>
-			</div>
-			<div class="col-lg-3 offset-1 d-lg-block d-none"><img src="img/about.png"/></div>
-			<div class="col-lg-7 d-flex align-items-center">
-				<ul class="pl-3 pt-3">
-					<li>7 мощных производственных цехов.</li>
-					<li>12 высокопроизводительных совре­менных линий.</li>
-					<li>Партнеры и дистрибьюторы по России и странам СНГ,   филиалы и      	эксклюзивные торговые команды.</li>
-					<li>500 профессионально работающих спе­циалистов.</li>
-					<li>Тысячи довольных клиентов </li>
-					<li>Сотни тысяч довольных потребителей!</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="news_block">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="text-center pt-5 mt-2 mb-5">Сладкие новости</h2>
-			</div>
-			<div class="col-lg-12">
-				<div class="row">
-					<div class="col-lg-3 col-md-6 col-6 ">
-						<a href="#">
-						<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-						</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="col-12 d-flex justify-content-center align-items-center mt-3">
-				<a class="col-lg-2 d-flex justify-content-center align-items-center black_button pt-2 pb-2 mb-5" href="#">
-					<span href="#">Все новости</span>
-				</a>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="map_block">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-5 mt-5 mb-5 pl-5 info_in_contact">
-				<h2 class="pt-5 pb-3">Контакты</h2>
-				<p class="mb-4">ООО "Галан", Россия,<br>
-					352430, Краснодарский край,<br>
-					г. Курганинск,<br>
-					ул. Коммунистическая, д. 158,</p>
-				<p class="news_heading_block mb-0">Фактический адрес:</p>
-				<p class="mb-4">Россия, 352430,<br>
-					Краснодарский край,<br>
-					г. Курганинск,<br>
-					ул. Кавказская, д. 6,</p>
-				<p class="news_heading_block mb-0">Приемная:</p>
-				<p class="mb-4"><a href="tel:8(86147) 2-24-71">8 (86147) 2-24-71</a>,<a href="mailto:gendir@galanconditer.ru">gendir@galanconditer.ru</a></p>
-				<p class="news_heading_block mb-0">Отдел продаж:</p>
-				<p class="mb-4">тел./факс: <a href="tel:8 (86147) 7-77-77">8 (86147) 7-77-77</a>, <a href="mailto:info@galanconditer.ru "> info@galanconditer.ru </a></p>
-				<p class="news_heading_block mb-0">Отдел снабжения:</p>
-				<p class="mb-0">тел.:<a href="tel:8 (86147) 2-52-45">8 (86147) 2-52-45</a> , факс: <a href="tel:(86147) 2-51-95">(86147) 2-51-95</a></p>
-				<p class="mb-5 mt-4 mt-md-0"><span class="news_heading_block">Главный технолог:</span><a href="mailto:tehnolog@galanconditer.ru"> tehnolog@galanconditer.ru </a> </p>
-			</div>
-		</div>
-	</div>
-	<div id="map" style="width: 100%; height: 630px"></div>
-</section>
+
 <footer class="d-flex align-items-center">
 	<div class="container mt-4 mt-lg-0">
 		<div class="row">
@@ -491,8 +355,8 @@
 
     function init(){
         myMap = new ymaps.Map("map", {
-            center: [45.040029, 38.985099],
-            zoom: 17,
+            center: [45.040604, 38.975116],
+            zoom: 14,
             controls: ['zoomControl']
         });
 
@@ -504,12 +368,12 @@
 // Необходимо указать данный тип макета.
             iconLayout: 'default#image',
 // Своё изображение иконки метки.
-            iconImageHref: 'img/logo_map.png',
+            iconImageHref: '/bitrix/templates/PLANUM/img/logo_map.png',
 // Размеры метки.
-            iconImageSize: [56, 68],
+            iconImageSize: [51, 70],
 // Смещение левого верхнего угла иконки относительно
 // её "ножки" (точки привязки).
-            iconImageOffset: [-20, -68]
+            iconImageOffset: [-5, -38]
         }),
             myMap.behaviors.disable('scrollZoom');
         myMap.geoObjects.add(myPlacemark);
