--- a/news_detail.html
+++ b/news_detail.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<header>
+<header class="news_page_detail secondary_header">
 	<svg class="d-none" xmlns="http://www.w3.org/2000/svg"  width="0"  viewBox="0 0 114.469 99.656">
 		<defs>
 			<filter id="f2" x="0" y="0" width="200%" height="200%">
@@ -85,68 +85,12 @@
 				</div>
 			</div>
 			<div class="col-12 head_center_text d-flex justify-content-center align-items-center">
-				<h2>Сладкого много не бывает</h2>
+                <div class="row-column">
+				<h1>Название новости</h1>
+                <p>23.09.2018</p>
+                </div>
 			</div>
-			<div class="col-12 d-md-flex bottom_list d-none">
-				<div class="row align-items-center icons--wood">
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Крекеры</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon2"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Вафли</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon3"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Восточные
-							сладости</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon4"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Зефир
-							весовой</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon5"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Сухари</p>
-					</div>
-					<div class="col-lg-2 col-md-2 d-flex flex-column align-items-center justify-content-center icon">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex">
-							<svg width="100%" viewbox="0 0 100 100">
-								<use xlink:href="#Icon6"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Леденцы</p>
-					</div>
-				</div>
-			</div>
+
 		</div>
 	</div>
 </header>
@@ -179,178 +123,51 @@
 	</div>
 </div>
 </section>
-<section class="list_mobile_catalog d-flex d-md-none mt-4">
-	<div class="container">
 
-			<div class="row align-items-center icons--wood">
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-								<use xlink:href="#Icon"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Крекеры</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-								<use xlink:href="#Icon2"></use>
-							</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Вафли</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-							<use xlink:href="#Icon3"></use>
-						</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Восточные
-							сладости</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-15 0 120 100">
-							<use xlink:href="#Icon4"></use>
-						</svg>
-					</div>
-					<p class="m-0 name_product d-flex align-items-center">Зефир<br>
-						весовой</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-5 0 120 100">
-							<use xlink:href="#Icon5"></use>
-						</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Сухари</p>
-					</div>
-				</div>
-				<div class="col-6 d-flex flex-column align-items-center justify-content-center icon">
-					<div class="border_block pt-4 pb-4 d-flex flex-column align-items-center justify-content-center">
-						<a  class="home_link" href=""></a>
-						<div class="image_block d-flex pb-4 pt-3">
-							<svg width="100%" viewbox="-10 0 120 100">
-							<use xlink:href="#Icon6"></use>
-						</svg>
-						</div>
-						<p class="m-0 name_product d-flex align-items-center">Леденцы</p>
-					</div>
-				</div>
-			</div>
-
-	</div>
-</section>
-<section class="about_block mt-5 mb-2 mb-lg-5">
+<section class="news_section_detail mt-2 mb-2 mb-lg-2">
 	<div class="container">
 		<div class="row">
-			<div class="col-12">
-				<h1 class="text-center fb pb-4">Кондитерская фабрика Галан это...</h1>
-			</div>
-			<div class="col-lg-3 offset-1 d-lg-block d-none"><img src="img/about.png"/></div>
-			<div class="col-lg-7 d-flex align-items-center">
-				<ul class="pl-3 pt-3">
-					<li>7 мощных производственных цехов.</li>
-					<li>12 высокопроизводительных совре­менных линий.</li>
-					<li>Партнеры и дистрибьюторы по России и странам СНГ,   филиалы и      	эксклюзивные торговые команды.</li>
-					<li>500 профессионально работающих спе­циалистов.</li>
-					<li>Тысячи довольных клиентов </li>
-					<li>Сотни тысяч довольных потребителей!</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="news_block">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="text-center pt-5 mt-2 mb-5">Сладкие новости</h2>
-			</div>
-			<div class="col-lg-12">
+            <div class="col-lg-10 offset-lg-1 articl_detail pb-4 pt-4">
+				<h3>Подзаголовок</h3>
+				<p>Ребрендинг определяет рыночный имидж предприятия. Программа лояльности отталкивает конструктивный анализ
+					рыночных цен, учитывая результат предыдущих медиа-кампаний. Как предсказывают футурологи целевой трафик
+					отталкивает рекламоноситель. Отсюда естественно следует, что диверсификация бизнеса подсознательно
+					упорядочивает институциональный стратегический рыночный план.
+					Тактика выстраивания отношений с коммерсчекими агентами директивно тормозит пресс-клиппинг. Объемная
+					скидка синхронизирует рейтинг. Рекламное сообщество, следовательно, отражает нишевый проект.
+				</p>
+				<h3>Подзаголовок</h3>
+				<p>Ребрендинг определяет рыночный имидж предприятия. Программа лояльности отталкивает конструктивный анализ
+					рыночных цен, учитывая результат предыдущих медиа-кампаний. Как предсказывают футурологи целевой трафик
+					отталкивает рекламоноситель. Отсюда естественно следует, что диверсификация бизнеса подсознательно
+					упорядочивает институциональный стратегический рыночный план.
+					Тактика выстраивания отношений с коммерсчекими агентами директивно тормозит пресс-клиппинг. Объемная
+					скидка синхронизирует рейтинг. Рекламное сообщество, следовательно, отражает нишевый проект.
+				</p>
+				<p>
+					Тактика выстраивания отношений с коммерсчекими агентами директивно тормозит пресс-клиппинг. Объемная
+					скидка синхронизирует рейтинг. Рекламное сообщество, следовательно, отражает нишевый проект.
+				</p>
+				<h3>Подзаголовок</h3>
+				<p>Ребрендинг определяет рыночный имидж предприятия. Программа лояльности отталкивает конструктивный анализ
+					рыночных цен, учитывая результат предыдущих медиа-кампаний. Как предсказывают футурологи целевой трафик
+					отталкивает рекламоноситель. Отсюда естественно следует, что диверсификация бизнеса подсознательно
+					упорядочивает институциональный стратегический рыночный план.
+					Тактика выстраивания отношений с коммерсчекими агентами директивно тормозит пресс-клиппинг. Объемная
+					скидка синхронизирует рейтинг. Рекламное сообщество, следовательно, отражает нишевый проект.
+				</p>
+            </div>
+			<div class="col-lg-10 offset-lg-1 listing pb-4">
 				<div class="row">
-					<div class="col-lg-3 col-md-6 col-6 ">
-						<a href="#">
-						<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-						</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-6">
-						<a href="#">
-							<div class="img_news" style="  background: url(img/news.png);background-repeat: no-repeat;background-position: center;background-size: contain;">
-							</div>
-						</a>
-						<div class="block_name_news mt-2"><a href="#" class="name_news">Название новости или статьи в несколько строк</a></div>
-						<div class="block_data_mews"><a href="#" class="data_news">19.12.18</a></div>
-					</div>
+					<div class="col-2 col-sm-4"><a class="next_articles" href="#"><span class="d-md-block d-none">< Предыдущая статья</span><span class="d-md-none d-block"><</span></a></div>
+					<div class="col-8 col-sm-4 d-flex justify-content-center align-items-center"><a href="#"><span class="d-lg-block d-none">Вернуться к списку новостей</span><span class="d-lg-none d-block">Назад к новостям</span></a></div>
+					<div class="col-2 col-sm-4 d-flex justify-content-end "><a class="next_articles" href="#"><span class="d-md-block d-none">Следущая статья ></span><span class="d-md-none d-block">></span></a></div>
 				</div>
 			</div>
-			<div class="col-12 d-flex justify-content-center align-items-center mt-3">
-				<a class="col-lg-2 d-flex justify-content-center align-items-center black_button pt-2 pb-2 mb-5" href="#">
-					<span href="#">Все новости</span>
-				</a>
-			</div>
-		</div>
 	</div>
 </section>
-<section class="map_block">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-5 mt-5 mb-5 pl-5 info_in_contact">
-				<h2 class="pt-5 pb-3">Контакты</h2>
-				<p class="mb-4">ООО "Галан", Россия,<br>
-					352430, Краснодарский край,<br>
-					г. Курганинск,<br>
-					ул. Коммунистическая, д. 158,</p>
-				<p class="news_heading_block mb-0">Фактический адрес:</p>
-				<p class="mb-4">Россия, 352430,<br>
-					Краснодарский край,<br>
-					г. Курганинск,<br>
-					ул. Кавказская, д. 6,</p>
-				<p class="news_heading_block mb-0">Приемная:</p>
-				<p class="mb-4"><a href="tel:8(86147) 2-24-71">8 (86147) 2-24-71</a>,<a href="mailto:gendir@galanconditer.ru">gendir@galanconditer.ru</a></p>
-				<p class="news_heading_block mb-0">Отдел продаж:</p>
-				<p class="mb-4">тел./факс: <a href="tel:8 (86147) 7-77-77">8 (86147) 7-77-77</a>, <a href="mailto:info@galanconditer.ru "> info@galanconditer.ru </a></p>
-				<p class="news_heading_block mb-0">Отдел снабжения:</p>
-				<p class="mb-0">тел.:<a href="tel:8 (86147) 2-52-45">8 (86147) 2-52-45</a> , факс: <a href="tel:(86147) 2-51-95">(86147) 2-51-95</a></p>
-				<p class="mb-5 mt-4 mt-md-0"><span class="news_heading_block">Главный технолог:</span><a href="mailto:tehnolog@galanconditer.ru"> tehnolog@galanconditer.ru </a> </p>
-			</div>
-		</div>
-	</div>
-	<div id="map" style="width: 100%; height: 630px"></div>
-</section>
+
+
 <footer class="d-flex align-items-center">
 	<div class="container mt-4 mt-lg-0">
 		<div class="row">
@@ -491,8 +308,8 @@
 
     function init(){
         myMap = new ymaps.Map("map", {
-            center: [45.040029, 38.985099],
-            zoom: 17,
+            center: [45.040604, 38.975116],
+            zoom: 14,
             controls: ['zoomControl']
         });
 
@@ -504,12 +321,12 @@
 // Необходимо указать данный тип макета.
             iconLayout: 'default#image',
 // Своё изображение иконки метки.
-            iconImageHref: 'img/logo_map.png',
+            iconImageHref: '/bitrix/templates/PLANUM/img/logo_map.png',
 // Размеры метки.
-            iconImageSize: [56, 68],
+            iconImageSize: [51, 70],
 // Смещение левого верхнего угла иконки относительно
 // её "ножки" (точки привязки).
-            iconImageOffset: [-20, -68]
+            iconImageOffset: [-5, -38]
         }),
             myMap.behaviors.disable('scrollZoom');
         myMap.geoObjects.add(myPlacemark);
